cmake_minimum_required(VERSION 3.26)
project(AED2324_proj2)

set(CMAKE_CXX_STANDARD 17)

add_executable(AED2324_proj2 src/main.cpp
        src/Graph.h
        src/Graph.cpp
        src/Menu.cpp
        src/Menu.h
        src/Airport.cpp
        src/Airport.h
        src/Airport.h
        src/Airline.cpp
        src/Airline.h
        src/Flight.cpp
        src/Flight.h
        src/Flight.h
        src/Data.cpp
        src/Data.h
        src/Filereader.cpp
        src/Filereader.h
)